--- a/src/app/components/medidores/medidores.html
+++ b/src/app/components/medidores/medidores.html
@@ -26,31 +26,22 @@
         <thead md-head md-order="query.order" md-on-reorder="getDesserts">
           <tr md-row>
             <th md-column md-order-by="nameToLower"><span>Codigo</span></th>
-            <th md-column md-numeric md-order-by="calories.value"><span>Numero</span></th>
-            <th md-column md-numeric>Marca</th>
+            <th md-column md-numeric md-order-by="calories.value"><span>Marca</span></th>
             <th md-column md-numeric>Fecha Registro</th>
+            <th md-column md-numeric>Lectura Incial</th>
             <th md-column md-numeric>Vivienda</th>
             <th md-column md-numeric>Estado</th>
             <th md-column md-numeric></th>
           </tr>
         </thead>
         <tbody md-body>
-          <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla">
-            <td md-cell>d6sa786das</td>
-            <td md-cell>321323</td>
-            <td md-cell>ELSTER</td>
-            <td md-cell>11/14/2017</td>
-            <td md-cell>1</td>
-            <td md-cell>Activo</td>
-            <td md-cell><md-button md-colors="{background: 'Red'}" layout-fill>Modificar</md-button></td>
-          </tr>
-          <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla">
-            <td md-cell>dsad8768as</td>
-            <td md-cell>787987</td>
-            <td md-cell>STAR</td>
-            <td md-cell>06/20/2017</td>
-            <td md-cell>1</td>
-            <td md-cell>Activo</td>
+          <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla" ng-repeat="medid in vm.medidor">
+            <td md-cell>{{ medid.num_medidor }}</td>
+            <td md-cell>{{ medid.marca_medidor }}</td>
+            <td md-cell>{{ medid.fecha_registro }}</td>
+            <td md-cell>{{ medid.lectura_inicial }}</td>
+            <td md-cell>{{ medid.vivienda_id }}</td>
+            <td md-cell>{{ medid.estado_medidor_id }}</td>
             <td md-cell><md-button md-colors="{background: 'Red'}" layout-fill>Modificar</md-button></td>
           </tr>
         </tbody>
