--- a/src/app/components/toolbar/toolbar.html
+++ b/src/app/components/toolbar/toolbar.html
@@ -1,19 +1,6 @@
-<div>
-  <md-toolbar class="md-hue-2 toolbar" md-colors="{background: 'Red'}" layout="row">
-    <div class="md-toolbar-tools">
-      <md-button class="md-icon-button" ng-click="vm.toggleLeft()">
-        <md-icon md-svg-icon="/assets/img/menu.svg"></md-icon>
-      </md-button>
-      <h2 flex md-truncate>Be-Water</h2>
-      <md-button ng-if="!vm.isLogged" ui-sref="login">
-        Iniciar Sesion
-      </md-button>
-      <md-button ng-if="vm.isLogged" ng-click="vm.logout()">
-        Cerrar Sesion
-      </md-button>
-    </div>
-  </md-toolbar>
-  <md-sidenav  md-colors="{background: 'Red-600'}" class="md-sidenav-left" md-component-id="left" md-whiteframe="4">
+<div layout="row" style="height: 100%;">
+  <md-sidenav md-colors="{background: 'Red-600'}" flex="20" ng-if="vm.vista"
+    class="md-sidenav-left" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')" md-whiteframe="4">
     <md-toolbar class="md-theme-indigo table"  md-colors="{background: 'Red-600'}">
       <div layout-padding>
         <div layout="row">
@@ -28,7 +15,7 @@
       <md-divider></md-divider>
       <div flex layout="column">
         <div layout="column">
-          <div layout="column" layout-aling="start center">
+          <div layout="column" layout-aling="start center" ng-if="!vm.vista">
             <md-button class="texto" ui-sref="login" ng-click="vm.toggleLeft()">
               <md-icon md-svg-src="/assets/img/usuarios.svg"></md-icon>Login
             </md-button>
@@ -79,7 +66,23 @@
             <md-icon md-svg-src="/assets/img/usuarios.svg"></md-icon>Cliente
           </md-button>
         </div>
+        <div flex layout="column">
+          <md-button ng-if="vm.isLogged" ng-click="vm.logout()">
+            Cerrar Sesion
+          </md-button>
+        </div>
       </div>
     </div>
   </md-sidenav>
+  <div layout="column" flex flex-xs="100" flex-md="100" flex-sm="100">
+    <md-toolbar class="md-hue-2 toolbar" md-colors="{background: 'Red'}" layout="row">
+      <div class="md-toolbar-tools">
+        <h2 flex md-truncate>Be-Water</h2>
+        <md-button ng-if="!vm.isLogged" ui-sref="login">
+          Iniciar Sesion
+        </md-button>
+      </div>
+    </md-toolbar>
+    <ui-view></ui-view>
+  </div>
 </div>
