Add Responsive Sidenav And Colors

--- a/src/app/components/emisionCobranza/emisionCobranza.html
+++ b/src/app/components/emisionCobranza/emisionCobranza.html
@@ -194,14 +194,14 @@
       <div flex="40" flex-offset="30" flex-md="40" flex-offset-md="30" flex-xs="90" flex-offset-xs="5">
         <div flex layout-xs="column">
           <div layout="row" layout-align="center center" layout-padding>
-            <md-button md-colors="{background: 'Red'}" ui-sref="historialCobranza" layout-fill style="min-height: 40px;">Historial Cobranza</md-button>
+            <md-button md-colors="{background: 'LightBlue-800'}" ui-sref="historialCobranza" layout-fill style="min-height: 40px;">Historial Cobranza</md-button>
           </div>
         </div>
       </div>
       <div flex="40" flex-offset="30" flex-md="40" flex-offset-md="30" flex-xs="90" flex-offset-xs="5">
         <div flex layout-xs="column">
           <div layout="row" layout-align="center center" layout-padding>
-            <md-button class="md-raised marg" md-colors="{background: 'Red'}" layout-fill style="min-height: 40px;">Ingresar</md-button>
+            <md-button class="md-raised marg" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 40px;">Ingresar</md-button>
           </div>
         </div>
       </div>
