--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -24,7 +24,7 @@
       </div>
       <div flex layout-xs="column">
         <center>
-          <md-button class="md-raised" md-colors="{background: 'Red'}" ng-click="vm.login(vm.credentials)" layout-fill style="min-height: 50px;">Ingresar</md-button>
+          <md-button class="md-raised" md-colors="{background: 'LightBlue-900'}" ng-click="vm.login(vm.credentials)" layout-fill style="min-height: 50px;">Ingresar</md-button>
         </center>
       </div>
       <div layout-xs="column" layout-padding>
