--- a/src/app/components/medidores/medidores.html
+++ b/src/app/components/medidores/medidores.html
@@ -13,7 +13,7 @@
           <md-input-container>
         </div> 
         <div flex=10 flex-xs="20">
-          <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'Red'}" ng-click="vm.busqueda(vm.datomedidor)">
+          <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'Red-800'}" ng-click="vm.busqueda(vm.datomedidor)">
               <md-icon md-svg-src="/assets/img/busqueda.svg"></md-icon>
           </md-button>
         </div>
@@ -42,7 +42,7 @@
             <td md-cell>{{ medid.lectura_inicial }}</td>
             <td md-cell>{{ medid.vivienda_id }}</td>
             <td md-cell>{{ medid.estado_medidor_id }}</td>
-            <td md-cell><md-button md-colors="{background: 'Red'}" layout-fill>Modificar</md-button></td>
+            <td md-cell><md-button md-colors="{background: 'LightBlue-900'}" layout-fill>Modificar</md-button></td>
           </tr>
         </tbody>
       </table>
