--- a/src/app/components/registro/registro.html
+++ b/src/app/components/registro/registro.html
@@ -72,7 +72,7 @@
         </div>
       </div>
       <div layout="row" layout-align="center center" flex layout-xs="column">
-        <md-button class="md-raised" md-colors="{background: 'Red'}" layout-fill style="min-height: 50px;" ng-click="vm.crearcliente(vm.cliente)">Registrarme</md-button>
+        <md-button class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.crearcliente(vm.cliente)">Registrarme</md-button>
       </div>
       <div layout-xs="column" layout-padding>
         <md-checkbox name="tos" ng-model="button" required>
