--- a/src/app/components/registroMensual/registroMensual.html
+++ b/src/app/components/registroMensual/registroMensual.html
@@ -131,7 +131,7 @@
       </div>
       <div flex layout-xs="column">
         <div layout="row" layout-align="center center" layout-padding>
-          <md-button class="md-raised marg" md-colors="{background: 'Red'}" layout-fill style="min-height: 50px;">Registrar</md-button>
+          <md-button class="md-raised marg" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;">Registrar</md-button>
         </div>
       </div>
     </div>
