--- a/src/app/components/registroPagos/registroPagos.html
+++ b/src/app/components/registroPagos/registroPagos.html
@@ -15,7 +15,7 @@
             </div>
             <div flex="40" flex-xs="50">
               <md-input-container md-no-float class="md-block">
-                <center><md-button md-colors="{background: 'Red'}" class="md-raised md-primary">Buscar</md-button></center>
+                <center><md-button md-colors="{background: 'LightBlue-900'}" class="md-raised md-primary">Buscar</md-button></center>
               </md-input-container>
             </div>
           </div>
@@ -85,7 +85,7 @@
       </div>
       <div flex layout-xs="column">
         <div layout="row" layout-align="center center">
-          <md-button class="md-raised marg" md-colors="{background: 'Red'}" layout-fill style="min-height: 50px;">Ingresar</md-button>
+          <md-button class="md-raised marg" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;">Ingresar</md-button>
         </div>
       </div>
       <div layout-xs="column">
