--- a/src/app/components/tabla/tabla.html
+++ b/src/app/components/tabla/tabla.html
@@ -11,7 +11,7 @@
           <md-input-container>
         </div> 
         <div flex=10 flex-xs="20">
-            <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'Red'}" ng-click="vm.busqueda(vm.datocliente)">
+            <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'Red-800'}" ng-click="vm.busqueda(vm.datocliente)">
                 <md-icon md-svg-src="/assets/img/busqueda.svg"></md-icon>
             </md-button>
         </div>
