--- a/src/app/components/viviendas/viviendas.html
+++ b/src/app/components/viviendas/viviendas.html
@@ -11,7 +11,7 @@
           <md-input-container>
         </div> 
         <div flex=10 flex-xs="20">
-            <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'Red'}" ng-click="vm.busqueda(vm.datovivienda)">
+            <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'Red-800'}" ng-click="vm.busqueda(vm.datovivienda)">
                 <md-icon md-svg-src="/assets/img/busqueda.svg"></md-icon>
             </md-button>
         </div>
@@ -40,7 +40,7 @@
             <td md-cell>{{ viviend.estado_id }}</td>
             <td md-cell>{{ viviend.comuna_id }}</td>
             <td md-cell>{{ viviend.subsidio_id }}</td>
-            <td md-cell><md-button md-colors="{background: 'Red'}" layout-fill>Modificar</md-button></td>
+            <td md-cell><md-button md-colors="{background: 'LightBlue-900'}" layout-fill>Modificar</md-button></td>
           </tr>
         </tbody>
       </table>
